<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/MaterialToolbarStyle"
        app:title="Login Activity"/>
    <TextView
        android:id="@+id/tv_login_page"
        style="@style/TextViewStyleTitle"
        android:text="@string/login_page" />
    <LinearLayout
        style="@style/CustomLinearLayoutStyle">
        <TextView
            android:id="@+id/tv_phone_number"
            style="@style/TextViewStyle"
            android:text="@string/phone_number" />
        <EditText
            android:id="@+id/et_phone_number"
            style="@style/CustomEditText"
            android:hint="@string/phone_number_input"/>
    </LinearLayout>
    <LinearLayout
        style="@style/CustomLinearLayoutStyle">
        <TextView
            android:id="@+id/tv_password"
            style="@style/TextViewStyle"
            android:text="@string/login_password"/>
        <EditText
            android:id="@+id/et_password"
            style="@style/CustomEditText"

            android:hint="@string/password_input"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/login_is_miss_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"/>

    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle2">
        <Button
            android:id="@+id/bt_login_login"
            style="@style/ButtonStyle"
            android:text="@string/login"/>
        <Button
            android:id="@+id/bt_login_register"
            style="@style/ButtonStyle"
            android:text="@string/register" />
    </LinearLayout>
</LinearLayout>