<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/MaterialToolbarStyle"
        app:title="Login Activity"/>
    <TextView
        android:id="@+id/tv_user_sitting"
        style="@style/TextViewStyleTitle"
        android:text="@string/user_sitting"/>
    <LinearLayout
        style="@style/UserSittingLinearLayoutStyle">
        <TextView
            style="@style/CustomTextView"
            android:text="@string/gender"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="27dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:textSize="17dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:textSize="17dp"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        style="@style/UserSittingLinearLayoutStyle">
        <TextView
            style="@style/CustomTextView"
            android:text="爱好" />
        <CheckBox
            android:id="@+id/checkbox_reading"
            style="@style/CustomCheckBox"
            android:text="阅读"/>
        <CheckBox
            android:id="@+id/checkbox_running"
            style="@style/CustomCheckBox"
            android:text="跑步"/>
        <CheckBox
            android:id="@+id/checkbox_traveling"
            style="@style/CustomCheckBox"
            android:text="旅行"/>
    </LinearLayout>
    <LinearLayout
        style="@style/UserSittingLinearLayoutStyle">
        <TextView
            style="@style/CustomTextView"
            android:text="职业" />
        <Spinner
            android:id="@+id/spinner_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:entries="@array/professions_array"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle2">
        <Button
            android:id="@+id/bt_confirm"
            style="@style/ButtonConfirmStyle"/>
    </LinearLayout>
</LinearLayout>